demo-virtualization-portal/base/demo-env/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vm-dev
  labels:
    app.kubernetes.io/part-of: virt-portal
    environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: vm-staging
  labels:
    app.kubernetes.io/part-of: virt-portal
    environment: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: vm-prod
  labels:
    app.kubernetes.io/part-of: virt-portal
    environment: prod
